# gpuSGDLM

./: .gitignore  LICENSE  README.md  build_rSGDLM.sh  build_tarball.sh  run_autoconf.sh
rSGDLM/: DESCRIPTION  NAMESPACE  configure  configure.ac
rSGDLM/src/: Makevars.in  R_main.cpp  cublasGetErrorString.cuh  cublas_manager.cuh  cuda_manager.cuh  curandGetErrorString.cuh  curand_manager.cuh  kernel_functions.cuh  logger.cpp  logger.hpp  loggerGPU.cuh  memory_manager.hpp  memory_manager_GPU.cuh  memory_manager_RCPP.hpp  simPointers.cuh  utils.cuh
rSGDLM/src/SGDLM/: HostWrapper.hpp  HostWrapperFactory.cu  HostWrapperFactory.hpp  HostWrapperImpl.cu  HostWrapperImpl.cuh  RcppWrapper.cpp  RcppWrapper.hpp  SGDLM.cu  SGDLM.cuh
